@@ -1,9 +1,12 @@
 package cn.summer.core;
 
+import cn.summer.annotations.AutoWired;
 import cn.summer.annotations.Component;
 import cn.summer.annotations.ComponentScan;
 
 import java.io.File;
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.util.HashMap;
 
@@ -19,11 +22,10 @@ public class AnnotationApplicationContext implements ApplicationContext {
         beanDefinationMap = new HashMap<>();
         this.configClass = configClass;
         //read all config info, create defination class for each bean
-        collectBeans();
-        createSingletonBeans();
+        collectBeanDefinations();
     }
-
-    private void collectBeans() {
+//    scan base package, create all BeanDefinations
+    private void collectBeanDefinations() {
         String basePackage;
         ComponentScan componentScan = (ComponentScan) configClass.getAnnotation(ComponentScan.class);
         if (componentScan == null){
@@ -37,9 +39,17 @@ public class AnnotationApplicationContext implements ApplicationContext {
         ClassLoader classLoader = AnnotationApplicationContext.class.getClassLoader();
         //get application class path, which lead to base package
         URL resource = classLoader.getResource(basePackage);
+        //base package not found
+        if (resource == null){
+            return ;
+        }
         //open directory
         File file = new File(resource.getFile());
         File[] files = file.listFiles();
+        //no class file existing
+        if (files == null){
+            return;
+        }
         for (File f : files) {
             String absolutePath = f.getAbsolutePath();
             absolutePath = absolutePath.substring(absolutePath.indexOf("cn"),absolutePath.indexOf(".class"));
@@ -63,7 +73,7 @@ public class AnnotationApplicationContext implements ApplicationContext {
 
     private String getBeanNameOrDefault(Class<?> aClass, Component component) {
         //default use classname but lower case for first letter
-        if ("".equals(component.value())){
+        if (component == null||"".equals(component.value())){
             String name = aClass.getName();
             String[] split = name.split("\\.");
             char[] chars = split[split.length - 1].toCharArray();
@@ -74,34 +84,51 @@ public class AnnotationApplicationContext implements ApplicationContext {
         }
     }
 
-    private void createSingletonBeans() {
-        for (String beanName : beanDefinationMap.keySet()) {
-            try {
-                Object newBean = createNewBean(beanName);
-                ioc.put(beanName,newBean);
-                ioc.put(newBean.getClass().getName(),newBean);
-            } catch (IllegalAccessException e) {
-                e.printStackTrace();
-            } catch (InstantiationException e) {
-                e.printStackTrace();
-            }
-        }
-    }
 
-    private Object createNewBean(String beanName) throws IllegalAccessException, InstantiationException {
-        BeanDefination beanDefination = this.beanDefinationMap.get(beanName);
+    private Object createBean(String beanName) {
+        BeanDefination beanDefination = beanDefinationMap.get(beanName);
         Class beanClass = beanDefination.getBeanClass();
-        Object instance = beanClass.newInstance();
-        return instance;
+        try {
+            Object instance = beanClass.getDeclaredConstructor().newInstance();
+            Field[] fields = beanClass.getDeclaredFields();
+            for (Field field :fields) {
+                //if need injection, get bean from ioc, or create new bean
+                if (field.isAnnotationPresent(AutoWired.class)){
+                    Object filedBean = getBean(field.getName());
+                    if (filedBean == null){
+                        filedBean = createBean(field.getName());
+                    }
+                    //inject by type
+                    field.setAccessible(true);
+                    field.set(instance,filedBean);
+                }
+            }
+            ioc.put(beanName,instance);
+            ioc.put(instance.getClass().getName(),instance);
+            return instance;
+        } catch (NoSuchMethodException e) {
+            e.printStackTrace();
+        } catch (IllegalAccessException e) {
+            e.printStackTrace();
+        } catch (InstantiationException e) {
+            e.printStackTrace();
+        } catch (InvocationTargetException e) {
+            e.printStackTrace();
+        }
+        return null;
     }
 
     @Override
     public Object getBean(String beanName) {
-        return ioc.get(beanName);
+        Object o = ioc.get(beanName);
+        if (o == null){
+            return createBean(beanName);
+        }
+        return o;
     }
 
     @Override
     public Object getBean(Class clazz) {
-        return ioc.get(clazz.getName());
+        return getBean(clazz.getName());
     }
 }
